split off stdio and create libugly for monstrosities such as system() and daemon().  In the future, crap like popen() will go there, too.

--- a/mips/Makefile.add
+++ b/mips/Makefile.add
@@ -1,5 +1,5 @@
 
 CFLAGS+=-Os -fstrict-aliasing -fno-pic -mno-abicalls -BE
-VPATH:=mips:syscalls.s:lib:$(VPATH)
+VPATH:=mips:syscalls.s:$(VPATH)
 
 dietlibc.a: setjmp_aux.o
