forgot to add alpha specific target __time.o

--- a/alpha/Makefile.add
+++ b/alpha/Makefile.add
@@ -2,4 +2,4 @@
 CFLAGS+=-Os -Iinclude -fomit-frame-pointer -fstrict-aliasing
 VPATH:=alpha:syscalls.s:$(VPATH)
 
-LIBOBJ+=divq.o divl.o remq.o reml.o seteuid.o
+LIBOBJ+=divq.o divl.o remq.o reml.o seteuid.o __time.o
