--- a/arm/Makefile.add
+++ b/arm/Makefile.add
@@ -1,3 +1,3 @@
 
-CFLAGS+=-Os -fomit-frame-pointer -fstrict-aliasing
+CFLAGS+=-Os -fomit-frame-pointer -fstrict-aliasing -mhard-float
 VPATH:=arm:syscalls.s:$(VPATH)
