changed some... 1. removed some pthread dependencies for dietlibc 2. added a pthread_sys_alloc to compensate

--- a/libpthread/Makefile
+++ b/libpthread/Makefile
@@ -53,6 +53,7 @@ PTHREAD_OBJS = \
 	pthread_mutexattr_setkind_np.o \
  \
 	pthread_atfork.o \
+	pthread_sys_alloc.o \
 	pthread_sys_close.o \
 	pthread_sys_create.o \
 	pthread_sys_fcntl.o \
