put object and library files into bin-$ARCH (i.e. bin-sparc/ or bin-i386/).  add "diet" program (and man page) for easy compiling and linking against the diet libc.

--- a/mips/Makefile.add
+++ b/mips/Makefile.add
@@ -2,4 +2,4 @@
 CFLAGS+=-Os -fstrict-aliasing -fno-pic -mno-abicalls -BE
 VPATH:=mips:syscalls.s:$(VPATH)
 
-dietlibc.a: setjmp_aux.o
+dietlibc.a: $(OBJDIR)/setjmp_aux.o
