forgot to remove two files.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,9 +1,5 @@
-sln: sln.o ../dietlibc.a
-	gcc -nostdlib -o sln ../start.o sln.o ../dietlibc.a
-	strip -R .note -R .comment sln
-
-sln.o: sln.c
-	gcc -pipe -O2 -c sln.c
+sln: sln.c
+	diet gcc -s -pipe -Os -o sln sln.c
 
 clean:
-	rm -f sln.o sln
+	rm -f sln
