--- a/mips/Makefile.add
+++ b/mips/Makefile.add
@@ -1,5 +1,5 @@
 
-CFLAGS+=-Os -fstrict-aliasing -fno-pic -mno-abicalls -BE
+CFLAGS+=-Os -fstrict-aliasing -fno-pic -mno-abicalls -EB
 VPATH:=mips:syscalls.s:$(VPATH)
 
 dietlibc.a: $(OBJDIR)/setjmp_aux.o
