tried to understand this ld.so on arm....

--- a/dynlinker/Makefile
+++ b/dynlinker/Makefile
@@ -1,17 +1,20 @@
 #CFLAGS = -Wall -g
 CFLAGS = -Wall -Os # -fomit-frame-pointer
 
+ARCH = i386
+
 DYNLINK = diet-linux.so
 
 all: $(DYNLINK)
 
-DLIBS   = ../bin-i386/libdl.a ../bin-i386/dietlibc.a
+DLIBS   = ../bin-$(ARCH)/libdl.a ../bin-$(ARCH)/dietlibc.a
 LINKOPS = -Wl,-Ttext=0x1080,-N,-eldso_start
 
 $(DYNLINK): ldso_start.S ldso_test.c $(DLIBS)
-	$(CC) -I.. -I../include $(CFLAGS) -c ldso_test.c
-	gcc -nostdlib $(CFLAGS) -o $@ ldso_start.S ldso_test.o $(DLIBS) -lgcc $(LINKOPS)
-	strip -R .comment -R .note $@
+	$(CROSS)$(CC) -I.. -I../include $(CFLAGS) -c ldso_test.c
+	$(CROSS)$(CC) -I.. -I../include $(CFLAGS) -c ldso_start.S
+	$(CROSS)$(CC) -nostdlib $(LDFLAGS) -o $@ ldso_start.o ldso_test.o $(DLIBS) -lgcc $(LINKOPS)
+	$(CROSS)strip -R .comment -R .note $@
 
 install: $(DYNLINK)
 	cp $(DYNLINK) /lib
