missed to commit this minor change

--- a/mips/Makefile.add
+++ b/mips/Makefile.add
@@ -1,5 +1,4 @@
 
+LIBOBJ+=$(OBJDIR)/setjmp_aux.o
 CFLAGS+=-Os -fstrict-aliasing -fno-pic -mno-abicalls -EB
 VPATH:=mips:syscalls.s:$(VPATH)
-
-dietlibc.a: $(OBJDIR)/setjmp_aux.o
