redo a few changes from the other repository

--- a/mips/Makefile.add
+++ b/mips/Makefile.add
@@ -1,4 +1,3 @@
-
 LIBOBJ+=$(OBJDIR)/setjmp_aux.o
-CFLAGS+=-Os -fstrict-aliasing -fno-pic -mno-abicalls -EB
+CFLAGS+=-Os -fstrict-aliasing -fno-pic -mno-abicalls
 VPATH:=mips:syscalls.s:$(VPATH)
