some minor fixes... added symbol resolver do _dl_main (new dynamic linker)

--- a/libdl/Makefile
+++ b/libdl/Makefile
@@ -4,7 +4,7 @@ SRC = $(wildcard *.c) # test/test.c
 OBJ = _dl_jump.o $(SRC:.c=.o)
 
 #CFLAGS = -Wall -O2
-CFLAGS = -Wall -O2 -D__OD_CLEAN_ROOM -DNODIETREF -fPIC -fomit-frame-pointer
+CFLAGS = -Wall -O2 -D__OD_CLEAN_ROOM -DNODIETREF -fPIC -frerun-loop-opt -fschedule-insns2 # -fomit-frame-pointer
 
 %.o : %.S
 	diet gcc $(CFLAGS) -c -o $@ $^
@@ -23,7 +23,7 @@ test.g: test/test.c
 	gcc -o $@ $^ -ldl
 
 test.out: $(OBJ) test/test.o
-	$(HOME)/bin/diet gcc -o $@ $^
+	diet gcc -o $@ $^
 
 clean:
 	$(RM) *.o *.a *.out *~ # *.so
