be more alpha and gcc 2.96 for SuSE 7.1 AXP friendly, add fdatasync.

--- a/libpthread/Makefile
+++ b/libpthread/Makefile
@@ -72,6 +72,7 @@ PTHREAD_OBJS = \
 	pthread_sys_create.o \
 	pthread_sys_fcntl.o \
 	pthread_sys_fsync.o \
+	pthread_sys_fdatasync.o \
 	pthread_sys_nanosleep.o \
 	pthread_sys_logging.o \
 	pthread_sys_open.o \
