--- a/.cvsignore
+++ b/.cvsignore
@@ -12,6 +12,8 @@ bin-ppc
 bin-sparc
 bin-mipsel
 bin-parisc
+bin-s390
+bin-sparc64
 pic-alpha
 pic-arm
 pic-i386
@@ -20,4 +22,5 @@ pic-ppc
 pic-sparc
 pic-mipsel
 pic-parisc
-bin-s390
+pic-s390
+pic-sparc64
