--- a/arm/Makefile.add
+++ b/arm/Makefile.add
@@ -2,3 +2,4 @@
 LIBOBJ+=$(OBJDIR)/md5asm.o
 CFLAGS+=-Os -fomit-frame-pointer -fstrict-aliasing -mhard-float
 VPATH:=arm:syscalls.s:$(VPATH)
+LIBGMON_OBJS+=$(OBJDIR)/mcount.o
