--- a/x86_64/Makefile.add
+++ b/x86_64/Makefile.add
@@ -1,2 +1,2 @@
-CFLAGS := -g $(CFLAGS) 
+CFLAGS := -Os -fstrict-aliasing -momit-leaf-frame-pointer -mfancy-math-387
 VPATH  := x86_64:syscalls.s:$(VPATH)
