--- a/mips/Makefile.add
+++ b/mips/Makefile.add
@@ -11,4 +11,4 @@ ENDIAN=-EB
 endif
 CFLAGS+=$(ENDIAN) -Os -G 0 -fstrict-aliasing -fno-pic -mno-abicalls
 VPATH:=mips:syscalls.s:$(VPATH)
-LIBOBJ+=$(OBJDIR)/pread64.o $(OBJDIR)/pwrite64.o
+LIBOBJ+=$(OBJDIR)/pread64.o $(OBJDIR)/pwrite64.o $(OBJDIR)/divdi3.o
