--- a/arm/Makefile.add
+++ b/arm/Makefile.add
@@ -1,5 +1,8 @@
 
 LIBOBJ+=$(OBJDIR)/md5asm.o $(OBJDIR)/__aeabi_unwind_cpp.o
 CFLAGS+=-Os -fomit-frame-pointer -fstrict-aliasing
+#ifdef __ARM_EABI__
+CFLAGS+=-mabi=aapcs-linux -mfloat-abi=soft -mno-thumb-interwork
+#endif
 VPATH:=arm:syscalls.s:$(VPATH)
 LIBGMON_OBJS+=$(OBJDIR)/mcount.o
