--- a/test/string/Makefile
+++ b/test/string/Makefile
@@ -1,16 +1,19 @@
-#DIET=diet
+DIET=diet
 CC=gcc
 CFLAGS=-Wall -fno-builtin
 
 all: stringtest
 
 TESTPROGRAMS=memccpy memchr memcmp memcpy memrchr strcasecmp strcmp strlen strncat strncpy strrchr strstr \
-strspn strcspn strpbrk
+strspn strcspn strpbrk mempcpy
 
 stringtest: $(TESTPROGRAMS)
 
 %: %.c
 	$(DIET) $(CC) $(CFLAGS) $^ -o $@
+
+mempcpy: mempcpy.c
+	$(DIET) $(CC) $(CFLAGS) $^ -o $@ -lcompat
 
 clean:
 	rm -f $(TESTPROGRAMS)
