--- a/arm/Makefile.add
+++ b/arm/Makefile.add
@@ -1,5 +1,6 @@
 
 LIBOBJ+=$(OBJDIR)/md5asm.o $(OBJDIR)/__aeabi_unwind_cpp.o
+LIBOBJ+=$(OBJDIR)/__fadvise.o $(OBJDIR)/arm_fadvise.o
 CFLAGS+=-Os -fomit-frame-pointer -fstrict-aliasing
 #ifdef __ARM_EABI__
 CFLAGS+=-mabi=aapcs-linux -mfloat-abi=soft -mno-thumb-interwork
