--- a/mips/Makefile.add
+++ b/mips/Makefile.add
@@ -9,6 +9,6 @@
 ifeq ($(CROSS),mips-linux-)
 ENDIAN=-meb
 endif
-CFLAGS+=$(ENDIAN) -Os -G 0 -fstrict-aliasing -fno-pic -mno-abicalls
+CFLAGS+=$(ENDIAN) -Os -fstrict-aliasing
 VPATH:=mips:syscalls.s:$(VPATH)
 LIBOBJ+=$(OBJDIR)/pread64.o $(OBJDIR)/pwrite64.o $(OBJDIR)/divdi3.o
