--- a/x86_64/Makefile.add
+++ b/x86_64/Makefile.add
@@ -4,4 +4,5 @@ else
 CFLAGS := -Os -fstrict-aliasing -momit-leaf-frame-pointer -mfancy-math-387 -fPIC -fvisibility=hidden $(EXTRACFLAGS)
 endif
 VPATH  := x86_64:syscalls.s:$(VPATH)
-LIBOBJ += $(OBJDIR)/arch_prctl.o $(OBJDIR)/__CAS.o $(OBJDIR)/__munmap_and_exit.o
+LIBOBJ += $(OBJDIR)/arch_prctl.o $(OBJDIR)/__CAS.o $(OBJDIR)/__munmap_and_exit.o $(OBJDIR)/getcontext.o
+LIBOBJ += $(OBJDIR)/setcontext.o
