stackgap PIE updates, add forgotten sys/capability.h

--- a/x86_64/Makefile.add
+++ b/x86_64/Makefile.add
@@ -1,8 +1,10 @@
 ifeq ($(CC),clang)
 CFLAGS := -Os -fstrict-aliasing -momit-leaf-frame-pointer $(EXTRACFLAGS)
 else
-CFLAGS := -Os -fstrict-aliasing -momit-leaf-frame-pointer -mfancy-math-387 -fpie -fvisibility=hidden $(EXTRACFLAGS)
+CFLAGS := -Os -fstrict-aliasing -momit-leaf-frame-pointer -mfancy-math-387 $(EXTRACFLAGS)
+#CFLAGS := -Os -fstrict-aliasing -momit-leaf-frame-pointer -mfancy-math-387 $(EXTRACFLAGS)
 endif
+ALWAYS_PIC=1
 VPATH  := x86_64:syscalls.s:$(VPATH)
 LIBOBJ += $(OBJDIR)/arch_prctl.o $(OBJDIR)/__CAS.o $(OBJDIR)/__munmap_and_exit.o $(OBJDIR)/getcontext.o
-LIBOBJ += $(OBJDIR)/setcontext.o
+LIBOBJ += $(OBJDIR)/setcontext.o $(OBJDIR)/start-pie.o
