--- a/x86_64/Makefile.add
+++ b/x86_64/Makefile.add
@@ -7,4 +7,4 @@ endif
 ALWAYS_PIC=1
 VPATH  := x86_64:syscalls.s:$(VPATH)
 LIBOBJ += $(OBJDIR)/arch_prctl.o $(OBJDIR)/__CAS.o $(OBJDIR)/__munmap_and_exit.o $(OBJDIR)/getcontext.o
-LIBOBJ += $(OBJDIR)/setcontext.o $(OBJDIR)/start-pie.o
+LIBOBJ += $(OBJDIR)/setcontext.o $(OBJDIR)/start-pie.o $(OBJDIR)/stackgap-pie.o
