x86_64/start.S: pass envp correctly
dynamic pagesize patch broke passing of envp on x86-64; preserve %rdx
and added testsuite program to veirfy correctparameter passing.

fixes https://github.com/ensc/dietlibc/issues/7

Signed-off-by: Enrico Scholz <enrico.scholz@ensc.de>

--- a/test/Makefile
+++ b/test/Makefile
@@ -16,6 +16,8 @@ protoent prototypes putenv pwent rand48 read1 readdir readdir64 regex select sen
 sigsetjmp speed spent sprintf sscanf stdarg strcasecmp strcmp strncat strncpy strptime strrchr \
 strstr strtol sysconf sysenter unaligned ungetc utime waitpid
 
+TESTPROGRAMS += startup-test
+
 test: $(TESTPROGRAMS)
 
 ffs: ffs.c
