test: added tst-seekdir64 test
Signed-off-by: Enrico Scholz <enrico.scholz@ensc.de>

--- a/test/dirent/Makefile
+++ b/test/dirent/Makefile
@@ -4,7 +4,7 @@ CFLAGS=-Wall
 
 all: dirent
 
-TESTPROGRAMS=opendir-tst1 tst-seekdir
+TESTPROGRAMS=opendir-tst1 tst-seekdir tst-seekdir64
 
 dirent: $(TESTPROGRAMS)
 
