--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,15 @@ env:
 matrix:
   include:
     - env: EXTRA_CFLAGS=-m64 ARCH=x86_64
+
+  allow_failures:
+    # 32 bit builds not supported on travis
     - env: EXTRA_CFLAGS=-m32 ARCH=i386
+      addons:
+        apt:
+          packages:
+            - libstdc++6:i386
+            - gcc-multilib
 
 dist: xenial
 script:
